--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ section.perfil-container .perfil-wraper2{
 section.perfil-container .img-perfil{
 	width: 40%;
 	height: 100%;
-	background-image: url('../img/img_perfil.png');
+	background-image: url('../img/img_perfil.jpg');
 	background-size: 100% 100%;
 }
 
@@ -190,6 +190,7 @@ section.perfil-container .texto-perfil{
 section.perfil-container .texto-perfil h2{
 	 color: #698293;
 	 font-size: 18px;
+	 margin-top: -100px;
 }
 
 section.perfil-container .texto-perfil p{
