--- a/css/style.css
+++ b/css/style.css
@@ -162,11 +162,11 @@ section.perfil-container{
 }
 
 section.perfil-container .container{
-	max-width: 800px;
+	max-width: 1000px;
 }
 
 section.perfil-container .perfil-wraper{
-	padding-top:60%;
+	padding-top:50%;
 	position: relative;
 }
 
@@ -199,9 +199,10 @@ section.perfil-container .texto-perfil h2{
 }
 
 section.perfil-container .texto-perfil p{
-	color: #4b4b4b;
+	color: rgb(190,190,190);
 	font-size: 14px;
 	margin-top:8px;
+	line-height: 24px;
 }
 
 section.videos{
@@ -454,6 +455,46 @@ footer .footer-block{
 	}
 }
 
+@media screen and (max-width: 850px){
+	section.perfil-container .perfil-wraper{
+		padding-top: 0;
+	}
+
+	section.perfil-container .perfil-wraper2{
+		/*
+		position: absolute;
+		left: 0;
+		top: 0;
+		display: flex;
+		align-items: center;
+		width: 100%;
+		height:100%;
+		*/
+		height: auto;
+		position: static;
+		text-align: center;
+		display: inline-block;
+		/*flex-direction: column;*/
+	}
+
+	section.perfil-container .img-perfil{
+		width: 50%;
+		padding-top:70%;
+		display: inline-block;
+		height: auto;
+		/*
+		background-image: url('../imagens/img_perfil.png');
+		background-size: 100% 100%;
+		*/
+	}
+
+	section.perfil-container .texto-perfil{
+		display: inline-block;
+		text-align: justify;
+		width: 100%;
+		padding:80px 30px 30px 30px;
+	}
+}
 
 @media screen and (max-width: 768px){
 
@@ -488,86 +529,46 @@ footer .footer-block{
 	}
 
 
-		section.servicos > .container .box-servico:nth-of-type(1){
-			width: 90%;
-			max-width: 350px;
-			padding:40px 2%;
-		}
+	section.servicos > .container .box-servico:nth-of-type(1){
+		width: 90%;
+		max-width: 350px;
+		padding:40px 2%;
+	}
 
-		section.servicos > .container .box-servico:nth-of-type(2){
-			width: 94%;
-			max-width: 380px;
-			padding:50px 2%;
-		}
+	section.servicos > .container .box-servico:nth-of-type(2){
+		width: 94%;
+		max-width: 380px;
+		padding:50px 2%;
+	}
 
-		section.servicos > .container .box-servico:nth-of-type(3){
-			width: 90%;
-			max-width: 350px;
-			padding:40px 2%;
-		}
+	section.servicos > .container .box-servico:nth-of-type(3){
+		width: 90%;
+		max-width: 350px;
+		padding:40px 2%;
+	}
 
-	
+	section.videos{
+		text-align: center;
+	}
 
-		section.perfil-container .perfil-wraper{
-			padding-top: 0;
-		}
-
-		section.perfil-container .perfil-wraper2{
-			/*
-			position: absolute;
-			left: 0;
-			top: 0;
-			display: flex;
-			align-items: center;
-			width: 100%;
-			height:100%;
-			*/
-			height: auto;
-			position: static;
-			text-align: center;
-			display: inline-block;
-			/*flex-direction: column;*/
-		}
-
-		section.perfil-container .img-perfil{
-		width: 50%;
-		padding-top:70%;
+	section.videos .box-video{
+		float: none;
+		width: 70%;
+		margin-top: 30px;
 		display: inline-block;
-		height: auto;
-		/*
-		background-image: url('../imagens/img_perfil.png');
-		background-size: 100% 100%;
-		*/
-		}
+		/*border:5px solid white;*/
+		/*background-color: green;*/
+		padding-top:calc(70% * 0.6);
+	}
 
-		section.perfil-container .texto-perfil{
-			display: inline-block;
-			text-align: justify;
-			width: 100%;
-			padding:0 30px;
-		}
+	.img-mosaico-single-social{
+		width: calc(100% / 3);
+		padding-top: calc(100% / 3);
+	}
 
-		section.videos{
-			text-align: center;
-		}
-
-		section.videos .box-video{
-			float: none;
-			width: 70%;
-			display: inline-block;
-			/*border:5px solid white;*/
-			/*background-color: green;*/
-			padding-top:calc(70% * 0.6);
-		}
-
-		.img-mosaico-single-social{
-			width: calc(100% / 3);
-			padding-top: calc(100% / 3);
-		}
-
-		.mosaico-social > div:nth-of-type(1n+4){
-			display: none;
-		}
+	.mosaico-social > div:nth-of-type(1n+4){
+		display: none;
+	}
 
 }
 
