--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,44 @@
 	font-family:'Montserrat', sans-serif;
 }
 
+/**Estilo para o plugin slick**/
+
+.slick-dotted ul{
+	list-style-type: none;
+	text-align: center;
+	position: relative;
+	margin-top: 50px;
+}
+
+.slick-dotted li{
+	display: inline-block;
+	margin:0 7px;
+}
+
+.slick-dotted button:focus{
+	outline: 0;
+}
+
+.slick-dotted li button{
+	width: 16px;
+	height: 16px;
+	border-radius: 8px;
+	color: #d8d8d8;
+	border-width: 0;
+	background: #d8d8d8;
+	opacity: 1;
+	cursor: pointer;
+}
+
+li.slick-active button{
+	background: #688293;
+	color: #688293;
+}
+
+.slick-slide:focus{outline: none;}
+
+/**Fim do estilo para o plugin**/
+
 .clear{
 	clear: both;
 }
@@ -289,6 +327,7 @@ section.depoimentos .depoimento-single{
 .nome-depoimento img{
 	width: 32px;
 	height: 32px;
+	display: inline-block;
 	border-radius: 16px;
 }
 
